Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5688

No need of notify_update in CouchKVStore if vbucket state hasn't changed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • None
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      This is followup to code fix to MB-5662. If setVBucketState has checkpointId change only, then it doesn't have to call mc-engine notify_update. Do so only if vbucket state changed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liang Liang Guo (Inactive)
            liang Liang Guo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty