MB-5688 Don't notify_update for checkpointId only change

Local doc update with checkpointId only change, and it'd be waste
to send notify_update to mccouch.

Change-Id: I02db641089624179157cf653c7cab2c8ba96fa78
Reviewed-on: http://review.couchbase.org/17618
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>